<resources>
    <string name="app_name">Paróquia de São Paulo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_historial">Histórial Pároco</string>
    <string name="menu_conselho">Conselho Paroquial</string>
    <string name="menu_pastoral">Pastorais e Comissãos</string>
    <string name="menu_contacto">Contactos</string>
    <string name="menu_sobre">Sobre</string>

    <string name="navegacao_titulo">Paróquia de São Paulo</string>
    <string name="navegacao_email">paroquiasaopaulodeloanda@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
