<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.parquiadesopaulo.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.parquiadesopaulo.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_conselho"
        android:name="com.example.parquiadesopaulo.ui.conselho.ConselhoFragment"
        android:label="@string/menu_conselho"
        tools:layout="@layout/fragment_conselho" />

    <fragment
        android:id="@+id/nav_pastoral"
        android:name="com.example.parquiadesopaulo.ui.pastoral.PastoralFragment"
        android:label="@string/menu_pastoral"
        tools:layout="@layout/fragment_pastoral" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.parquiadesopaulo.ui.contactos.ContactosFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contactos" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.parquiadesopaulo.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />

</navigation>